# watsonx_model_tool_test

./: .env.template  .flake8  .gitignore  Makefile  README.md  _config.yml  index.html  pyproject.toml
.github/: ACTIONS_SETUP.md
.github/workflows/: daily-tool-test.yml
reports/: README.md  comprehensive_report.html  latest_comprehensive.html  latest_report.html  tool_test_report_20250716_165842.html  tool_test_report_20250717_084800.html  tool_test_report_20250717_101830.html  tool_test_report_20250717_110028.html  tool_test_report_20250717_123113.html  tool_test_report_20250717_142257.html  tool_test_report_20250717_144709.html  tool_test_report_20250718_061139.html  tool_test_report_20250718_082616.html  tool_test_report_20250718_101421.html  tool_test_report_20250719_061024.html  tool_test_report_20250720_061102.html  tool_test_report_20250721_061233.html  tool_test_report_20250722_061157.html  tool_test_report_20250722_090320.html  tool_test_report_20250722_104631.html  tool_test_report_20250722_111759.html  tool_test_report_20250722_115613.html  tool_test_report_20250722_123654.html  tool_test_report_20250722_133835.html  tool_test_report_20250722_140756.html  tool_test_report_20250722_144817.html  tool_test_report_20250722_155336.html  tool_test_report_20250722_163114.html  tool_test_report_20250723_061212.html  tool_test_report_20250723_083724.html  tool_test_report_20250723_100928.html  tool_test_report_20250723_111159.html  tool_test_report_20250723_115409.html  tool_test_report_20250723_124248.html  tool_test_report_20250723_141316.html  tool_test_report_20250724_061153.html  tool_test_report_20250724_102511.html  tool_test_report_20250724_120151.html  tool_test_report_20250725_061201.html  tool_test_report_20250725_122427.html  (+342 more)
reports/history/: daily_summary.csv  models_registry.csv  test_results.csv
tests/: conftest.py  test_cli.py  test_config.py  test_litellm_client.py
tests/mocks/: mock_client.py
tests/testers/: test_model_tester.py  test_result_handler.py
tests/tools/: test_hello_world.py
tests/utils/: test_errors.py  test_formatting.py  test_html_generator.py  test_logging.py
watsonx_tool_tester/: __init__.py  __main__.py  cli.py  config.py
watsonx_tool_tester/clients/: __init__.py  base.py  litellm.py  watsonx.py
watsonx_tool_tester/testers/: __init__.py  model_tester.py  (+1 more)
(+9 files in other folders)
